--- a/ListButton/styles.css
+++ b/ListButton/styles.css
@@ -1,11 +1,29 @@
 button {
-    background-color: red;
-    border: 2px black thick;
-    color: greenyellow;
+    background-color: skyblue;
+    border: 4px green ridge;
+    color: rgb(0, 17, 255);
     text-align: center;    
     font-size: 16px;
 }
 
 h1.center {
     text-align: center
+}
+
+h1#new-point{
+    text-align: right
+}
+
+body {
+    background-color: bisque
+}
+
+header{
+    background-color: antiquewhite
+}
+
+header p {
+    text-align: center;
+    font-weight: bold;
+    font-size: 110%
 }
