updated root index.html and styles.css

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ section h1{
 
 nav {        
     background-color: aliceblue;
-    border: 1px blue;
+    border: 5px black;
     padding: 8px;
     margin: -1px 0px 0px 0px;
 }
