--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ section h1{
 }
 
 nav {        
-    background-color: aliceblue;
+    background-color: cadetblue;
     border: 5px black;
     padding: 8px;
     margin: -1px 0px 0px 0px;
