--- a/Theme/styles.css
+++ b/Theme/styles.css
@@ -1,6 +1,10 @@
 body{
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
+    margin: auto;
+    max-width: 700px;
+    height: 580px;
+    display: block;
 }
 .byline{
     font-style: italic;
@@ -10,6 +14,8 @@ body{
 footer{
     background-color:darkgray;
     text-align: center;
+    border: 1px solid slategrey;
+    border-radius: 5px
 
 }
 
@@ -17,6 +23,8 @@ header{
     text-align: center;
     background-color:darkgray;
     font-size: 150%;
+    border: 1px solid slategray;
+    border-radius: 5px;
 }
 
 h1{
@@ -26,6 +34,10 @@ h1{
 main{
     background-color: darkgray;
     text-align: center;
+    display: inline-block;
+    border: 3px solid slategray;
+    border-radius: 20px;
+    padding-left: 5px;
 }
 
 nav{
@@ -49,4 +61,5 @@ nav li{
 .title{
     text-align: center;
 }
+
 
