--- a/Theme/styles.css
+++ b/Theme/styles.css
@@ -2,6 +2,7 @@ body{
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
     margin: auto;
+    text-align: center;
 }
 .byline{
     font-style: italic;
