--- a/Theme/styles.css
+++ b/Theme/styles.css
@@ -1,3 +1,16 @@
+aside{
+    border: 1px black solid;
+    border-radius: 8px;
+    font-size: 115%;
+    font-style: italic;
+    background-color: beige;
+    float: right;
+    width: 20%;
+    height: 5%;
+    padding: 5px;
+    margin-left: 8px;
+    margin-right: 8px;
+}
 body{
     background-color: black;
     font-family: Arial, Helvetica, sans-serif;
@@ -8,6 +21,7 @@ body{
     font-style: italic;
     font-size: 80%;
 }
+
 
 footer{
     background-color:darkgray;
@@ -27,6 +41,23 @@ header{
 
 h1{
     text-align: left;
+}
+
+figure img{
+    max-width: 100%;
+    margin: auto;
+}
+
+figure#floats{
+    float: right;
+    margin-right: 5px;
+    text-align: center;
+    font-style: italic;
+    font-size: smaller;
+    border: thin silver solid;
+    margin: 0.5em;
+    padding: 0.5em;
+
 }
 
 main{
