--- a/javascript-tests/radio-choices.css
+++ b/javascript-tests/radio-choices.css
@@ -4,4 +4,16 @@
 
 .greenBackground {
     background-color: green;
-}           
+}        
+
+.yellowBackground {
+    background-color: yellow;
+}
+
+.redBackground {
+    background-color: red;
+}
+
+.purpleBackground {
+    background-color: purple;
+}
